--- a/views/store.html
+++ b/views/store.html
@@ -254,7 +254,7 @@
                                     </div>
                                     <div class="itemNumber">
                                         <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" value="0">
+                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
                                     </div>
                                     <p class="total">$499</p>
                             </article>
@@ -267,12 +267,14 @@
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <label for="quantity"></label>
-                                    <input type="number" id="quantity" name="quantity" min="1" value="0">
+                                    <div class="itemNumber">
+                                        <label for="quantity"></label>
+                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
+                                    </div>
                                     <p class="total">$499</p>
                             </article>
                             <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
+                                    <img class="itemProduct" src="../img/pic29.webp" alt="Product pic">
                                     <div class="description">
                                         <p class="price">$499</p>
                                         <div class="icons">
@@ -280,11 +282,27 @@
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <label for="quantity"></label>
-                                    <input type="number" id="quantity" name="quantity" min="1" value="0">
+                                    <div class="itemNumber">
+                                        <label for="quantity"></label>
+                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
+                                    </div>
                                     <p class="total">$499</p>
                             </article>
-
+                            <article class="cartlist">
+                                <img class="itemProduct" src="../img/pic22.webp" alt="Product pic">
+                                <div class="description">
+                                    <p class="price">$499</p>
+                                    <div class="icons">
+                                        <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                        <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                    </div>
+                                </div>
+                                <div class="itemNumber">
+                                    <label for="quantity"></label>
+                                    <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
+                                </div>
+                                <p class="total">$499</p>
+                        </article>
                         </div>
                     </div>
                     <div class="outcomeCard">
@@ -295,7 +313,6 @@
                         </article>
                         <button class="btnCheckout">Secure checkout</button>
                     </div>
-
                 </nav>
             </div>
         </section>
