--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,260 @@ html .mainContainer {
   width: 100%;
   height: 100%;
 }
+html .mainContainer #cart {
+  display: none;
+}
+html .mainContainer #cart:checked ~ .sectionShop {
+  transform: translate(0%);
+}
+html .mainContainer .sectionShop {
+  width: 30vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  padding-top: 30px;
+  transform: translate(105%);
+  transition: 0.3s ease-in-out;
+}
+html .mainContainer .sectionShop .menuCart .cartShop .closeCross {
+  width: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 35px;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+html .mainContainer .sectionShop .menuCart .cartShop .closeCross:hover {
+  transform: rotate(270deg);
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0px auto;
+  padding: 0px 10px;
+  height: 380px;
+  overflow: scroll;
+  position: fixed;
+  top: 60px;
+  left: 20px;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cartlistWord {
+  width: inherit;
+  font-size: 1.3rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 0px;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category .titleCartlist {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
+  font-size: 1rem;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .itemProduct {
+  width: 15%;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description {
+  display: flex;
+  flex-direction: column;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .price {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #424242;
+  font-weight: 600;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .icons img {
+  width: 20px;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .itemNumber #quantity {
+  width: 45px;
+  padding: 2px;
+  text-align: left;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex;
+  position: absolute;
+  bottom: 0px;
+  left: 20px;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .shipping, html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .discount, html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .total {
+  margin: 2px;
+  width: inherit;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #424242;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-between;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .total {
+  color: #BC2327;
+  font-weight: 700;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout {
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #ffffff;
+  border: 1px solid transparent;
+  background-color: #070707;
+  transition: all 0.3s ease;
+}
+html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout:hover {
+  color: #070707;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  font-weight: 600;
+}
+html .mainContainer #wishlistSide {
+  display: none;
+}
+html .mainContainer #wishlistSide:checked ~ .sectionWishlist {
+  transform: translate(0%);
+}
+html .mainContainer .sectionWishlist {
+  width: 25vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  padding-top: 60px;
+  transform: translate(105%);
+  transition: 0.3s ease-in-out;
+}
+html .mainContainer .sectionWishlist .wishHeadLine .closeCross {
+  width: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 35px;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+html .mainContainer .sectionWishlist .wishHeadLine .closeCross:hover {
+  transform: rotate(270deg);
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0px auto;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wishlistWord {
+  width: inherit;
+  font-size: 1.3rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 0px;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .category .titleWishlist {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .itemProduct {
+  width: 15%;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .price {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+}
+html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .icons img {
+  width: 20px;
+}
 html .mainContainer .bannerShipping {
   width: 100%;
   height: 25px;
@@ -62,7 +316,7 @@ html .mainContainer .tagGetOff {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 8;
   text-decoration: none;
 }
 html .mainContainer .tagGetOff .discount {
@@ -1384,7 +1638,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   display: none;
 }
 .containerStore #cart:checked ~ .sectionShop {
-  transform: translate(105%);
+  transform: translate(0%);
 }
 .containerStore .sectionShop {
   width: 30vw;
@@ -1401,7 +1655,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
   padding-top: 30px;
-  transform: translate(0%);
+  transform: translate(105%);
   transition: 0.3s ease-in-out;
 }
 .containerStore .sectionShop .menuCart .cartShop .closeCross {
