--- a/views/store.html
+++ b/views/store.html
@@ -225,7 +225,7 @@
             </article>
         </section>
 
-        <!-- Cart -->
+        <!-- ShopCart -->
 
         <input id="cart" type="checkbox">
         <section class="sectionShop">
@@ -317,6 +317,8 @@
             </div>
         </section>
 
+        <!-- Place order -->
+
         <section class="placeOrder">
             <div class="delivery">
                 <form class="deliveryContact">
@@ -365,6 +367,8 @@
                 <button class="placeOnOrder">Place on order</button>
             </form>
         </section>
+
+        <!-- Purchase Order -->
 
         <!-- <section class="purchaseOrder">
             <input type="checkbox" id="orderCross">
