--- a/css/main.css
+++ b/css/main.css
@@ -1795,6 +1795,40 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   border: 1px solid #000000;
   font-weight: 600;
 }
+.containerStore #order {
+  display: none;
+}
+.containerStore #order:checked ~ .sectionPlaceOrder {
+  transform: translate(0%);
+}
+.containerStore .sectionPlaceOrder {
+  width: 65vw;
+  height: auto;
+  background-color: #707070;
+  display: flex;
+  position: fixed;
+  top: 25%;
+  left: 17.5%;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  padding-top: 60px;
+  transform: translate(0%);
+  transition: 0.3s ease-in-out;
+}
+.containerStore .sectionPlaceOrder .orderCross .crossCloseWhite {
+  width: 15px;
+  cursor: pointer;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.containerStore .sectionPlaceOrder .orderCross .crossCloseWhite:hover {
+  transform: rotate(270deg);
+}
 .containerStore #wishlistSide {
   display: none;
 }
