--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -40,6 +40,9 @@
             }
         }
     }
+
+    // Banner getOff
+
     .getOffHoddy{
         width:100%;
         height: 100%;
@@ -127,6 +130,9 @@
             position: relative;
         }
     }
+
+    // Banner shipping
+
     .bannerShipping{
         width:100%;
         height: 25px;
@@ -158,6 +164,9 @@
             }
         }
     }
+
+    // Purchase order
+
     .purchaseOrder{
         width: 40%;
         height: auto;
@@ -371,6 +380,9 @@
             }
         }
     }
+
+    // Filter items
+
     .sectionFilter{
         .menuFilterSide{
             width: 100%;
@@ -524,6 +536,9 @@
             }
         }
     }
+
+    // Shop cart
+
     #cart{
         display: none;
         &:checked ~ .sectionShop{
@@ -701,7 +716,49 @@
         }
     }
 
-    // Checkout this code
+    // Place order
+    #order{
+        display: none;
+        &:checked ~ .sectionPlaceOrder{
+            transform:translate(0%);
+        }
+    }
+    .sectionPlaceOrder{
+        width:65vw;
+        height:auto;
+        background-color: #707070;
+        display:flex;
+        position: fixed;
+        top:25%;
+        left:17.5%;
+        z-index: 10px;
+        flex-direction: column;
+        justify-content:flex-start;
+        align-items: flex-start;
+        overflow: hidden;
+        box-shadow: 0 0 10px 6px #070707;
+        z-index: 10;
+        padding-top: 60px;
+        transform: translate(0%);
+        transition: .3s ease-in-out;
+        .orderCross{
+            .crossCloseWhite{
+                width:15px;
+                cursor: pointer;
+                // position: absolute;
+                // top:20px;
+                // left:35px;
+                transform: rotate(0deg);
+                transition: all 0.3s ease-in-out;
+                &:hover{
+                    transform: rotate(270deg);
+                }
+            }
+        }
+
+    }
+
+    // Wishlist
 
     #wishlistSide{
         display: none;
