--- a/views/store.html
+++ b/views/store.html
@@ -319,53 +319,60 @@
 
         <!-- Place order -->
 
-        <section class="placeOrder">
-            <div class="delivery">
-                <form class="deliveryContact">
-                    <h3>Contact</h3>
-                    <label for="email"></label>
-                    <input type="email" id="email" placeholder="Email">
-                    <h3>Delivery</h3>
-                    <label for="name"></label>
-                    <input type="text" id="name" placeholder="Name">
+        <input type="checkbox" id="order">
+        <section class="sectionPlaceOrder">
+            <label for="order" class="orderCross">
+                <img class="crossCloseWhite" src="../img/close_Cross_White.svg" alt="Cross Icon" >
+            </label>
 
-                    <label for="lastName"></label>
-                    <input type="text" id="lastName" placeholder="Last name">
+            <div class="unionOrder">
+                <div class="delivery">
+                    <form class="deliveryContact">
+                        <h3>Contact</h3>
+                        <label for="email"></label>
+                        <input type="email" id="email" placeholder="Email">
+                        <h3>Delivery</h3>
+                        <label for="name"></label>
+                        <input type="text" id="name" placeholder="Name">
 
-                    <label for="Province"></label>
-                    <input type="text" id="Province" placeholder="Province">
+                        <label for="lastName"></label>
+                        <input type="text" id="lastName" placeholder="Last name">
 
-                    <label for="Address"></label>
-                    <input type="text" id="Address" placeholder="Address">
+                        <label for="Province"></label>
+                        <input type="text" id="Province" placeholder="Province">
 
-                    <label for="cellPhone"></label>
-                    <input type="text" id="cellPhone" placeholder="Cellphone [optional]">
+                        <label for="Address"></label>
+                        <input type="text" id="Address" placeholder="Address">
 
+                        <label for="cellPhone"></label>
+                        <input type="text" id="cellPhone" placeholder="Cellphone [optional]">
+
+                    </form>
+                    <article class="creditCards">
+                        <h3>All transactions are secure and encrypted.</h3>
+                        <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
+                    </article>
+                </div>
+                <form class="payment">
+                    <h3>Payment.</h3>
+                    <label for="creditCard"></label>
+                    <input type="text" id="creditCard" placeholder="Credit card">
+
+                    <label for="cardNumber"></label>
+                    <input type="text" id="cardNumber" placeholder="Card number">
+
+                    <label for="expiration"></label>
+                    <input type="text" id="expiration" placeholder="Expiration">
+
+                    <label for="securityCode"></label>
+                    <input type="text" id="securityCode" placeholder="Security code">
+
+                    <label for="nameOnCard"></label>
+                    <input type="text" id="nameOnCard" placeholder="Name on card">
+
+                    <button class="placeOnOrder">Place on order</button>
                 </form>
-                <article class="creditCards">
-                    <h3>All transactions are secure and encrypted.</h3>
-                    <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
-                </article>
             </div>
-            <form class="payment">
-                <h3>Payment.</h3>
-                <label for="creditCard"></label>
-                <input type="text" id="creditCard" placeholder="Credit card">
-
-                <label for="cardNumber"></label>
-                <input type="text" id="cardNumber" placeholder="Card number">
-
-                <label for="expiration"></label>
-                <input type="text" id="expiration" placeholder="Expiration">
-
-                <label for="securityCode"></label>
-                <input type="text" id="securityCode" placeholder="Security code">
-
-                <label for="nameOnCard"></label>
-                <input type="text" id="nameOnCard" placeholder="Name on card">
-
-                <button class="placeOnOrder">Place on order</button>
-            </form>
         </section>
 
         <!-- Purchase Order -->
