--- a/views/store.html
+++ b/views/store.html
@@ -328,7 +328,7 @@
             <div class="unionOrder">
                 <div class="delivery">
                     <form class="deliveryContact">
-                        <h3>Contact</h3>
+                        <h3 class="contact">Contact</h3>
                         <label for="email"></label>
                         <input type="email" id="email" placeholder="Email">
                         <h3>Delivery</h3>
@@ -349,7 +349,7 @@
 
                     </form>
                     <article class="creditCards">
-                        <h3>All transactions are secure and encrypted.</h3>
+                        <p class="transactions">All transactions are secure and encrypted.</p>
                         <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
                     </article>
                 </div>
@@ -370,7 +370,7 @@
                     <label for="nameOnCard"></label>
                     <input type="text" id="nameOnCard" placeholder="Name on card">
 
-                    <button class="placeOnOrder">Place on order</button>
+                    <button class="btnPlaceOnOrder">Place on order</button>
                 </form>
             </div>
         </section>
