--- a/css/main.css
+++ b/css/main.css
@@ -1810,12 +1810,14 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   left: 16.5%;
   z-index: 10px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
   margin: 0px auto;
-  padding: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   z-index: 10;
   transform: translate(0%);
   transition: 0.3s ease-in-out;
@@ -1832,9 +1834,51 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .containerStore .sectionPlaceOrder .unionOrder {
   width: 85%;
   display: flex;
-  flex-direction: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery {
+  width: 65%;
+  margin-right: 35px;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery .deliveryContact {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery .creditCards .paymentCards {
+  width: 80%;
+}
+.containerStore .sectionPlaceOrder .unionOrder .payment {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.containerStore .sectionPlaceOrder .unionOrder .payment .btnPlaceOnOrder {
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #ffffff;
+  border: 1px solid transparent;
+  background-color: #070707;
+  transition: all 0.3s ease;
+}
+.containerStore .sectionPlaceOrder .unionOrder .payment .btnPlaceOnOrder:hover {
+  color: #070707;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  font-weight: 600;
 }
 .containerStore #wishlistSide {
   display: none;
