--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -732,12 +732,14 @@
         left:16.5%;
         z-index: 10px;
         display:flex;
-        justify-content:center;
+        flex-direction: column;
+        justify-content:space-between;
         align-items: center;
         overflow: hidden;
         box-shadow: 0 0 10px 6px #070707;
         margin:0px auto;
-        padding:20px;
+        padding-top:30px;
+        padding-bottom:30px;
         z-index: 10;
         transform: translate(0%);
         transition: .3s ease-in-out;
@@ -758,12 +760,59 @@
         .unionOrder{
             width:85%;
             display:flex;
-            flex-direction: flex;
+            flex-direction: row;
             justify-content: space-between;
             align-items: center;
+            .delivery{
+                width:65%;
+                margin-right:35px;
+                .deliveryContact{
+                    display:flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                }
+                .creditCards{
+                    .transactions{
 
+                    }
+                    .paymentCards{
+                        width:80%;
+                    }
+                }
+
+            }
+            .payment{
+                width:35%;
+                display:flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: flex-start;
+                .btnPlaceOnOrder{
+                    width: 100%;
+                    padding: 10px 20px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin:20px auto;
+                    font-size: 1rem;
+                    font-family: $fontJura;
+                    font-weight: 600;
+                    color: #ffffff;
+                    border: 1px solid transparent;
+                    background-color: #070707;
+                    transition: all 0.3s ease;
+                    &:hover{
+                        color: #070707;
+                        background-color: #ffffff;
+                        border:1px solid #000000;
+                        font-weight: 600;
+                    }
+                }
+
+            }
         }
-
     }
 
     // Wishlist
