--- a/css/main.css
+++ b/css/main.css
@@ -1808,7 +1808,6 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   position: fixed;
   top: 20%;
   left: 16.5%;
-  z-index: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1818,8 +1817,9 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   margin: 0px auto;
   padding-top: 30px;
   padding-bottom: 30px;
-  z-index: 10;
+  z-index: 8;
   transform: translate(0%);
+  border-radius: 10px;
   transition: 0.3s ease-in-out;
 }
 .containerStore .sectionPlaceOrder .orderCross .crossCloseWhite {
@@ -1841,6 +1841,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .containerStore .sectionPlaceOrder .unionOrder .delivery {
   width: 65%;
   margin-right: 35px;
+  background-color: #ffffff;
+  border-radius: 10px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery .deliveryContact {
   display: flex;
@@ -1849,7 +1851,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   align-items: flex-start;
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery .creditCards .paymentCards {
-  width: 80%;
+  width: 70%;
 }
 .containerStore .sectionPlaceOrder .unionOrder .payment {
   width: 35%;
@@ -1857,6 +1859,9 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 10px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .payment .btnPlaceOnOrder {
   width: 100%;
@@ -1865,7 +1870,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 20px auto;
+  margin: 60px auto 0px;
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
