--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -260,6 +260,9 @@
     .purchaseOrder > * {
         position: relative;
     }
+
+    // Section store
+
     .sectionStore{
         .sectionCard{
             .cardProducts{
@@ -717,6 +720,7 @@
     }
 
     // Place order
+
     #order{
         display: none;
         &:checked ~ .sectionPlaceOrder{
@@ -730,7 +734,6 @@
         position: fixed;
         top:20%;
         left:16.5%;
-        z-index: 10px;
         display:flex;
         flex-direction: column;
         justify-content:space-between;
@@ -740,9 +743,11 @@
         margin:0px auto;
         padding-top:30px;
         padding-bottom:30px;
-        z-index: 10;
+        z-index: 8;
         transform: translate(0%);
+        border-radius: 10px;
         transition: .3s ease-in-out;
+
         .orderCross{
             .crossCloseWhite{
                 width:15px;
@@ -766,6 +771,8 @@
             .delivery{
                 width:65%;
                 margin-right:35px;
+                background-color: #ffffff;
+                border-radius: 10px;
                 .deliveryContact{
                     display:flex;
                     flex-direction: column;
@@ -774,13 +781,11 @@
                 }
                 .creditCards{
                     .transactions{
-
                     }
                     .paymentCards{
-                        width:80%;
+                        width:70%;
                     }
                 }
-
             }
             .payment{
                 width:35%;
@@ -788,6 +793,9 @@
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: flex-start;
+                background-color: #ffffff;
+                padding: 15px;
+                border-radius: 10px;
                 .btnPlaceOnOrder{
                     width: 100%;
                     padding: 10px 20px;
@@ -795,7 +803,7 @@
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    margin:20px auto;
+                    margin:60px auto 0px;
                     font-size: 1rem;
                     font-family: $fontJura;
                     font-weight: 600;
@@ -810,7 +818,6 @@
                         font-weight: 600;
                     }
                 }
-
             }
         }
     }
