--- a/views/store.html
+++ b/views/store.html
@@ -362,7 +362,7 @@
                     <input type="text" id="cardNumber" placeholder="Card number">
 
                     <label for="expiration"></label>
-                    <input type="text" id="expiration" placeholder="Expiration">
+                    <input type="text" id="expiration" placeholder="Expiration [MM/YY]">
 
                     <label for="securityCode"></label>
                     <input type="text" id="securityCode" placeholder="Security code">
