--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -741,13 +741,13 @@
         overflow: hidden;
         box-shadow: 0 0 10px 6px #070707;
         margin:0px auto;
-        padding-top:30px;
+        padding-top:15px;
         padding-bottom:30px;
+        font-family: $fontJura;
         z-index: 8;
         transform: translate(0%);
         border-radius: 10px;
         transition: .3s ease-in-out;
-
         .orderCross{
             .crossCloseWhite{
                 width:15px;
@@ -763,7 +763,7 @@
             }
         }
         .unionOrder{
-            width:85%;
+            width:92%;
             display:flex;
             flex-direction: row;
             justify-content: space-between;
@@ -772,6 +772,7 @@
                 width:65%;
                 margin-right:35px;
                 background-color: #ffffff;
+                padding: 15px;
                 border-radius: 10px;
                 .deliveryContact{
                     display:flex;
