--- a/views/store.html
+++ b/views/store.html
@@ -328,10 +328,10 @@
             <div class="unionOrder">
                 <div class="delivery">
                     <form class="deliveryContact">
-                        <h3 class="contact">Contact</h3>
+                        <h3 class="contactTitle">Contact</h3>
                         <label for="email"></label>
                         <input type="email" id="email" placeholder="Email">
-                        <h3>Delivery</h3>
+                        <h3 class="deliveryTitle">Delivery</h3>
                         <label for="name"></label>
                         <input type="text" id="name" placeholder="Name">
 
@@ -354,7 +354,7 @@
                     </article>
                 </div>
                 <form class="payment">
-                    <h3>Payment.</h3>
+                    <h3 class="paymentTitle">Payment</h3>
                     <label for="creditCard"></label>
                     <input type="text" id="creditCard" placeholder="Credit card">
 
