--- a/views/store.html
+++ b/views/store.html
@@ -353,25 +353,27 @@
                         <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
                     </article>
                 </div>
-                <form class="payment">
-                    <h3 class="paymentTitle">Payment</h3>
-                    <label for="creditCard"></label>
-                    <input type="text" id="creditCard" placeholder="Credit card">
+                <div class="formPayment">
+                    <form class="payment">
+                        <h3 class="paymentTitle">Payment</h3>
+                        <label for="creditCard"></label>
+                        <input type="text" id="creditCard" placeholder="Credit card">
 
-                    <label for="cardNumber"></label>
-                    <input type="text" id="cardNumber" placeholder="Card number">
+                        <label for="cardNumber"></label>
+                        <input type="text" id="cardNumber" placeholder="Card number">
 
-                    <label for="expiration"></label>
-                    <input type="text" id="expiration" placeholder="Expiration [MM/YY]">
+                        <label for="expiration"></label>
+                        <input type="text" id="expiration" placeholder="Expiration [MM/YY]">
 
-                    <label for="securityCode"></label>
-                    <input type="text" id="securityCode" placeholder="Security code">
+                        <label for="securityCode"></label>
+                        <input type="text" id="securityCode" placeholder="Security code">
 
-                    <label for="nameOnCard"></label>
-                    <input type="text" id="nameOnCard" placeholder="Name on card">
+                        <label for="nameOnCard"></label>
+                        <input type="text" id="nameOnCard" placeholder="Name on card">
 
-                    <button class="btnPlaceOnOrder">Place on order</button>
-                </form>
+                        <button class="btnPlaceOnOrder">Place on order</button>
+                    </form>
+                </div>
             </div>
         </section>
 
