--- a/css/main.css
+++ b/css/main.css
@@ -1841,6 +1841,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery {
   width: 60%;
+  height: 350px;
   margin-right: 35px;
   background-color: #ffffff;
   padding: 15px;
@@ -1850,15 +1851,23 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: #329cf3;
   row-gap: 4px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery .deliveryContact .contactTitle, .containerStore .sectionPlaceOrder .unionOrder .delivery .deliveryContact .deliveryTitle {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #BC2327;
-  margin-bottom: -5px;
+  margin-bottom: -2px;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery input {
+  width: 100%;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 5px;
+  font-size: 0.9rem;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery .creditCards .transactions {
   margin: 20px auto 5px;
@@ -1866,8 +1875,9 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .containerStore .sectionPlaceOrder .unionOrder .delivery .creditCards .paymentCards {
   width: 65%;
 }
-.containerStore .sectionPlaceOrder .unionOrder .payment {
+.containerStore .sectionPlaceOrder .unionOrder .formPayment {
   width: 40%;
+  height: 350px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1875,23 +1885,38 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-color: #ffffff;
   padding: 15px;
   border-radius: 10px;
+}
+.containerStore .sectionPlaceOrder .unionOrder .formPayment .payment {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   row-gap: 4px;
 }
-.containerStore .sectionPlaceOrder .unionOrder .payment .paymentTitle {
-  font-size: 1.2rem;
+.containerStore .sectionPlaceOrder .unionOrder .formPayment .payment .paymentTitle {
+  font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #BC2327;
-  margin-bottom: -3px;
+  margin-bottom: -2px;
 }
-.containerStore .sectionPlaceOrder .unionOrder .payment .btnPlaceOnOrder {
+.containerStore .sectionPlaceOrder .unionOrder .formPayment .payment input {
+  width: 100%;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 7px;
+  font-size: 0.9rem;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
+}
+.containerStore .sectionPlaceOrder .unionOrder .formPayment .payment .btnPlaceOnOrder {
   width: 100%;
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 60px auto 0px;
+  margin: 85px auto 0px;
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
@@ -1900,7 +1925,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-color: #070707;
   transition: all 0.3s ease;
 }
-.containerStore .sectionPlaceOrder .unionOrder .payment .btnPlaceOnOrder:hover {
+.containerStore .sectionPlaceOrder .unionOrder .formPayment .payment .btnPlaceOnOrder:hover {
   color: #070707;
   background-color: #ffffff;
   border: 1px solid #000000;
