Updating spaces place order

--- a/views/store.html
+++ b/views/store.html
@@ -329,20 +329,25 @@
                 <div class="delivery">
                     <form class="deliveryContact">
                         <h3 class="contactTitle">Contact</h3>
-                        <label for="email"></label>
-                        <input type="email" id="email" placeholder="Email">
-                        <h3 class="deliveryTitle">Delivery</h3>
-                        <label for="name"></label>
-                        <input type="text" id="name" placeholder="Name">
 
-                        <label for="lastName"></label>
-                        <input type="text" id="lastName" placeholder="Last name">
+                        <label for="email"></label>
+                        <input type="email" id="email" placeholder="Email *">
+
+                        <h3 class="deliveryTitle">Delivery</h3>
+
+                        <div class="fullName">
+                            <label for="name"></label>
+                            <input type="text" id="name" placeholder="Name *">
+
+                            <label for="lastName"></label>
+                            <input type="text" id="lastName" placeholder="Last name *">
+                        </div>
 
                         <label for="Province"></label>
-                        <input type="text" id="Province" placeholder="Province">
+                        <input type="text" id="Province" placeholder="Province *">
 
                         <label for="Address"></label>
-                        <input type="text" id="Address" placeholder="Address">
+                        <input type="text" id="Address" placeholder="Address *">
 
                         <label for="cellPhone"></label>
                         <input type="text" id="cellPhone" placeholder="Cellphone [optional]">
@@ -357,19 +362,19 @@
                     <form class="payment">
                         <h3 class="paymentTitle">Payment</h3>
                         <label for="creditCard"></label>
-                        <input type="text" id="creditCard" placeholder="Credit card">
+                        <input type="text" id="creditCard" placeholder="Credit card *">
 
                         <label for="cardNumber"></label>
-                        <input type="text" id="cardNumber" placeholder="Card number">
+                        <input type="text" id="cardNumber" placeholder="Card number *">
 
                         <label for="expiration"></label>
-                        <input type="text" id="expiration" placeholder="Expiration [MM/YY]">
+                        <input type="text" id="expiration" placeholder="Expiration [MM/YY] *">
 
                         <label for="securityCode"></label>
-                        <input type="text" id="securityCode" placeholder="Security code">
+                        <input type="text" id="securityCode" placeholder="Security code *">
 
                         <label for="nameOnCard"></label>
-                        <input type="text" id="nameOnCard" placeholder="Name on card">
+                        <input type="text" id="nameOnCard" placeholder="Name on card *">
 
                         <button class="btnPlaceOnOrder">Place on order</button>
                     </form>
