--- a/css/main.css
+++ b/css/main.css
@@ -1858,20 +1858,32 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #BC2327;
-  margin-bottom: -2px;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery .deliveryContact .deliveryTitle {
+  margin-top: 15px;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery .fullName {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.containerStore .sectionPlaceOrder .unionOrder .delivery .fullName #lastName {
+  margin-left: 15px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery input {
   width: 100%;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 5px;
-  font-size: 0.9rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  font-size: 0.8rem;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .delivery .creditCards .transactions {
-  margin: 20px auto 5px;
-  font-size: 0.7rem;
+  margin: 25px auto 5px;
+  font-size: 0.8rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #BC2327;
@@ -1902,14 +1914,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #BC2327;
-  margin-bottom: -2px;
 }
 .containerStore .sectionPlaceOrder .unionOrder .formPayment .payment input {
   width: 100%;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 7px;
-  font-size: 0.9rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  font-size: 0.8rem;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
 }
@@ -1920,7 +1931,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 85px auto 0px;
+  margin: 75px auto 0px;
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
