--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -785,22 +785,34 @@
                         font-family: $fontJura;
                         font-weight: 600;
                         color: #BC2327;
-                        margin-bottom: -2px;
+                    }
+                    .deliveryTitle{
+                        margin-top:15px;
+                    }
+                }
+                .fullName{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    #lastName{
+                        margin-left: 15px;
                     }
                 }
                 input{
                     width:100%;
-                    padding-top: 4px;
-                    padding-bottom: 4px;
-                    padding-left: 5px;
-                    font-size: 0.9rem;
+                    padding-top: 5px;
+                    padding-bottom: 5px;
+                    padding-left: 10px;
+                    font-size: 0.8rem;
                     border:1px solid #d9d9d9;
                     border-radius: 5px;
                 }
                 .creditCards{
                     .transactions{
-                        margin:20px auto 5px;
-                        font-size: 0.7rem;
+                        margin:25px auto 5px;
+                        font-size: 0.8rem;
                         font-family: $fontJura;
                         font-weight: 600;
                         color: #BC2327;
@@ -831,14 +843,13 @@
                         font-family: $fontJura;
                         font-weight: 600;
                         color: #BC2327;
-                        margin-bottom: -2px;
                     }
                     input{
                         width:100%;
-                        padding-top: 4px;
-                        padding-bottom: 4px;
-                        padding-left: 7px;
-                        font-size: 0.9rem;
+                        padding-top: 5px;
+                        padding-bottom: 5px;
+                        padding-left: 10px;
+                        font-size: 0.8rem;
                         border:1px solid #d9d9d9;
                         border-radius: 5px;
                     }
@@ -849,7 +860,7 @@
                         flex-direction: column;
                         justify-content: center;
                         align-items: center;
-                        margin:85px auto 0px;
+                        margin:75px auto 0px;
                         font-size: 1rem;
                         font-family: $fontJura;
                         font-weight: 600;
